Documentation: - data compression page has been updated
core:
- Texture2D external command buffer feature
- UMA refactoring for mesh geometry (Android backend)
- UMA refactoring for skin data

pbr:
- scene destroy logic has been fixed

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,9 @@
 # NVIDIA Nsight Graphics config
 /app/src/main/assets/imgui.ini
 
+# Profiling
+/app/src/main/profiling/.~lock.results.ods#
+
 # Tools
 /tools/html-validator/.vscode/
 /tools/html-validator/build/
