--- a/tools/editor/editor.vcxproj.filters
+++ b/tools/editor/editor.vcxproj.filters
@@ -339,6 +339,9 @@
     <ClCompile Include="..\..\app\src\main\cpp\sources\pbr\graphics_program_base.cpp">
       <Filter>Source Files\core\pbr</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\app\src\main\cpp\sources\pbr\font_storage_base.cpp">
+      <Filter>Source Files\core\pbr</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\app\src\main\cpp\include\logger.hpp">
@@ -721,6 +724,12 @@
     </ClInclude>
     <ClInclude Include="..\..\app\src\main\cpp\include\pbr\compute_program_base.hpp">
       <Filter>Header Files\core\pbr</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\app\src\main\cpp\include\pbr\font_storage_base.hpp">
+      <Filter>Header Files\core\pbr</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\app\src\main\cpp\include\pbr\font_storage_base.ipp">
+      <Filter>Source Files\core\pbr</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
