--- a/tools/editor/editor.vcxproj.filters
+++ b/tools/editor/editor.vcxproj.filters
@@ -303,9 +303,6 @@
     <ClCompile Include="..\..\app\src\main\cpp\sources\platform\windows\pbr\ui_pass.cpp">
       <Filter>Source Files\core\platform\windows\pbr</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\app\src\main\cpp\sources\platform\windows\pbr\image_ui_element.cpp">
-      <Filter>Source Files\core\platform\windows\pbr</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\app\src\main\cpp\sources\platform\windows\pbr\text_ui_element.cpp">
       <Filter>Source Files\core\platform\windows\pbr</Filter>
     </ClCompile>
@@ -735,6 +732,9 @@
       <Filter>Templates\pbr</Filter>
     </ClInclude>
     <ClInclude Include="..\..\app\src\main\cpp\templates\pbr\ui_element_base.ipp">
+      <Filter>Templates\pbr</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\app\src\main\cpp\templates\pbr\text_ui_element_base.ipp">
       <Filter>Templates\pbr</Filter>
     </ClInclude>
   </ItemGroup>
