core: - vulkan function rebalancing

--- a/app/src/main/cpp/include/platform/windows/vulkan_device.in
+++ b/app/src/main/cpp/include/platform/windows/vulkan_device.in
@@ -1,8 +1,11 @@
 X ( vkCmdBeginRendering )
 X ( vkCmdBindDescriptorBuffersEXT )
+X ( vkCmdCopyBuffer )
 X ( vkCmdEndRendering )
 X ( vkCmdPipelineBarrier2 )
 X ( vkCmdSetDescriptorBufferOffsetsEXT )
+X ( vkCmdSetScissor )
+X ( vkCmdSetViewport )
 X ( vkGetBufferDeviceAddress )
 X ( vkGetDescriptorEXT )
 X ( vkGetDescriptorSetLayoutBindingOffsetEXT )
